--- a/Styling/Style/style.sass
+++ b/Styling/Style/style.sass
@@ -138,12 +138,13 @@ input[type=number]::-webkit-outer-spin-button
 	height: 60vh
 
 .moduleContainer
-	height: 100%
+	height: auto
 	border: solid
 	border-width: 2px
 	border-color: $noire
 	border-radius: 10px
 	margin: 3vh 3vw 0 2vw
+	padding: 0 0 10vh 0
 	background-color: $eggshell
 
 .module
@@ -163,7 +164,6 @@ input[type=number]::-webkit-outer-spin-button
 	width: auto
 	min-width: auto
 	font-family: $PressStart
-	border: solid
 	padding: 1vh 1vw 3vh 1vw
 	background-color: $mintGreen
 
