Work Optimization and footer structure
created static elements folder for elements that appear on every page,
created basic structure for a footer, tweaked navbar to an optimal
amount of buttons, added some classes to optimize content structure

--- a/Styling/ChangeMachine/ChangeMachine.sass
+++ b/Styling/ChangeMachine/ChangeMachine.sass
@@ -8,21 +8,15 @@ $noire: #1e1d24
 #changeMachineSubmit
 	margin: 1vh 0 0 0
 
-.changeMachineStats
-	height: 15vh
-	width: auto
-	border: solid
-	border-width: 2px
-	border-color: $noire
-	border-radius: 10px
-	margin: 2vh 50vw 0 0
-	background-color: white
+@mixin border($borderType, $borderWidth)
+	border: $borderType
+	border-width: $borderWidth
+
 // Money types
 .bill
+	@include border(solid, 2px)
 	width: 80px
 	height: 35px
-	border: solid
-	border-width: 2px
 	border-color: darken($billColor, 20%)
 	border-radius: 2px
 	background-color: $billColor
@@ -31,10 +25,9 @@ $noire: #1e1d24
 	padding: 7px 0 0 0
 
 .quarter
+	@include border(solid, 2px)
 	width: 45px
 	height: 45px
-	border: solid
-	border-width: 2px
 	border-color: darken($quarterColor, 20%)
 	border-radius: 22.5px
 	background-color: $quarterColor
@@ -43,10 +36,9 @@ $noire: #1e1d24
 	padding: 10px 0 0 0
 
 .dime
+	@include border(solid, 2px)
 	width: 35px
 	height: 35px
-	border: solid
-	border-width: 2px
 	border-color: darken($dimeColor, 20%)
 	border-radius: 17.5px
 	background-color: $dimeColor
@@ -55,10 +47,9 @@ $noire: #1e1d24
 	padding: 6px 0 0 0
 
 .nickel
+	@include border(solid, 2px)
 	width: 40px
 	height: 40px
-	border: solid
-	border-width: 2px
 	border-color: darken($nickelColor, 20%)
 	border-radius: 20px
 	background-color: $nickelColor
@@ -67,10 +58,9 @@ $noire: #1e1d24
 	padding: 8px 0 0 0
 
 .penny
+	@include border(solid, 2px)
 	width: 37px
 	height: 37px
-	border: solid
-	border-width: 2px
 	border-color: darken($pennyColor, 20%)
 	border-radius: 18.5px
 	background-color: $pennyColor
