--- a/Styling/Style/style.sass
+++ b/Styling/Style/style.sass
@@ -74,11 +74,11 @@ input[type=number]::-webkit-outer-spin-button
 // Header Styling
 .header
 	border: solid
-	border-width: 1vw 0 1vw 0
+	border-width: 10px 0 10px 0
 	border-color: $noire
 
 .headerColumn
-	padding: 4% 3% 4% 3%
+	padding: 4%
 
 .headerSpacer
 	padding-top: 1%
@@ -86,6 +86,10 @@ input[type=number]::-webkit-outer-spin-button
 #headerText
 	@include setText($BungeeInline, 3.9em)
 	margin-top: 4%
+
+// Footer Styling
+.footerContainer
+	background-color: darken($lightGrey, 10%)
 
 // Button Styling
 .roundedButton, .amethystButton, .mintGreenButton
@@ -114,6 +118,9 @@ input[type=number]::-webkit-outer-spin-button
 	border-color: $eggshell
 
 // Content Styling
+.contentContainer
+	margin-bottom: 2vh
+
 .contentHeaderRow
 	min-height: 9vh
 
@@ -143,7 +150,7 @@ input[type=number]::-webkit-outer-spin-button
 	border-width: 2px
 	border-color: $noire
 	border-radius: 10px
-	margin: 3vh 3vw 0 2vw
+	margin: 3vh 3vw 2vh 2vw
 	padding: 0 0 10vh 0
 	background-color: $eggshell
 
