--- a/Styling/Style/style.css
+++ b/Styling/Style/style.css
@@ -60,7 +60,9 @@ input[type=number]::-webkit-outer-spin-button {
   margin-top: 4%; }
 
 .footerContainer {
-  background-color: #bfaee4; }
+  background-color: #bfaee4;
+  position: fixed;
+  bottom: 0; }
 
 .roundedButton, .amethystButton, .mintGreenButton {
   border-radius: 10px;
@@ -153,6 +155,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .module input[type=submit]:disabled {
   background-color: gray; }
+
+html, body {
+  height: 100%; }
 
 body {
   overflow-x: hidden;
