--- a/Styling/Style/style.sass
+++ b/Styling/Style/style.sass
@@ -90,6 +90,8 @@ input[type=number]::-webkit-outer-spin-button
 // Footer Styling
 .footerContainer
 	background-color: darken($lightGrey, 10%)
+	position: fixed
+	bottom: 0
 
 // Button Styling
 .roundedButton, .amethystButton, .mintGreenButton
@@ -178,6 +180,9 @@ input[type=number]::-webkit-outer-spin-button
 	background-color: gray
 
 // Body Styling
+html, body
+	height: 100%
+
 body
 	overflow-x: hidden
 	background-color: $lightGrey $important
